# LandCoverChange

./: GLAD_legend.xlsx  OSM_Data.Rmd  README.md  Raster Pre-Processing lulcc 5_60m.Rmd  Raster Pre-Processing lulcc.Rmd  Raster Pre-Processing lulcc2.Rmd  SanJose.RData  SanJose_UrbanGrowthModeling.Rmd  WeightedOverlay.Rmd  classifying_satellite_imagery_in_R.Rmd  landuse_preprocessing.ipynb  lc_2023.tif  lulcc_ReadMe.Rmd  lulcc_SanJose.Rmd  lulcc_SanJose_30m_Crop5a.Rmd  lulcc_SanJose_60m_Crop5.Rmd  lulcc_SanJose_LOCAL.Rmd  lulcc_SanJose_cloud.Rmd  lulcc_SanJose_cloud_OLD.Rmd  lulcc_SanJose_cropped.Rmd  lulcc_SanJose_mini.Rmd  lulcc_VM_README.md  nc4_to_Raster.Rmd
Archive/: Raster Pre-Processing.Rmd  classifying_satellite_imagery_single capture.Rmd
OUTPUTS/Crop5a_30m/: clues_output_2050.tif
OUTPUTS/crop5_60m/: clues_output_2050.tif
OUTPUTS/crop6_30m/: AnthroRiskNorm.tif  BioRiskNorm.tif  Built.tif  Forest.tif  Hotspot_Stoplight_2024.tif  LCC_Probability.tif  LCC_Probability.tif.aux.xml  Other.tif  UrbanProbability.tif  Water.tif  lc_2050.tif
data/: BiodiversityIntactnessIndex_2020.tif  LandCover.RData  Land_Cover_Change_Probs_Clark.tif  Landcover_2023.tif.ovr  SanJose.RData  clues_output.tif  highway_proximity_crop6.tif  roads_proximity_crop6.tif
data/ScenarioBased_LC/: urban_2024.tif
demand_estimation/: KNMI_API_Call.py  NetCDF_2_Raster.Rmd  PBL_IMAGE_LandCover.ipynb  PBL_land_cover_demand.csv  get_landcover_demand.ipynb  land_cover_demand.csv  landcover_demand_estimation.ipynb  test_pbl_image_landcover.ipynb
poetry/: pyproject.toml
(+67 files in other folders)
