[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
geopandas = "^0.14.3"
numpy = "^1.26.4"
xarray = "^2024.1.1"
matplotlib = "^3.8.3"
pandas = "^2.2.0"
requests = "^2.31.0"
cfgrib = "^0.9.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
